@@ -1,0 +1,6 @@
+# get our paisley on sys.path
+
+import os
+import sys
+
+sys.path.insert(0, os.path.dirname(__file__))
